bug style fixed

--- a/app/Resources/views/admin.html.twig
+++ b/app/Resources/views/admin.html.twig
@@ -1,5 +1,7 @@
 {% extends "::layout.html.twig" %}
 
+{% block classPage %}admin{% endblock %}
+
 {% block title %}
     {{ parent() }} - Admin
 {% endblock %}
