--- a/src/gospelcenter/CelebrationBundle/Resources/views/MobileAdminCelebration/add.html.twig
+++ b/src/gospelcenter/CelebrationBundle/Resources/views/MobileAdminCelebration/add.html.twig
@@ -61,7 +61,7 @@
         
         <fieldset class="block">
             <legend>Media</legend>  
-            {{ form_widget(form.video.vimeoId, {'attr': {'placeholder': 'Video'} }) }}
+            {{ form_widget(form.video.ownerId, {'attr': {'placeholder': 'Video'} }) }}
             {{ form_widget(form.audio.soundCloudId, {'attr': {'placeholder': 'Audio'} }) }}
         </fieldset>
         
