--- a/web/sass/adminEvents.scss
+++ b/web/sass/adminEvents.scss
@@ -59,7 +59,8 @@
         float: left;
         
         h1 {
-            padding-top: 2px;
+            padding-top: 8px;
+            margin-top: 0;
         }
         
         article.desc {
