--- a/app/Resources/views/local.html.twig
+++ b/app/Resources/views/local.html.twig
@@ -1,5 +1,7 @@
 {% extends "::layout.html.twig" %}
 
+{% block classPage %}local{% endblock %}
+
 {% block param %}
     <li><a href="{{ path('gospelcenterAdmin_celebrations_add', {'center': center.ref}) }}">Create a celebration</a></li>
     <li><a href="{{ path('gospelcenterAdmin_events_add', {'center': center.ref}) }}">Create an event</a></li>
