--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -185,11 +185,12 @@ select {
   #page > header #message {
     width: 100%;
     display: block;
-    position: absolute;
+    position: fixed;
     text-align: center;
     font-size: 1.3em;
     padding: 10px 0;
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    top: 0; }
   #page > header #get_ruban {
     margin: 8px 0px 0px 15px;
     position: absolute;
@@ -343,6 +344,8 @@ div.arrow_up {
     display: block;
     margin-top: 50px; }
 
+#page.admin h1 {
+  margin-top: 50px; }
 #page.home header {
   background: none; }
 #page.home #container {
@@ -406,7 +409,7 @@ div.arrow_up {
         height: 100%; }
 #page.home footer {
   background: none; }
-#page.selections #container, #page.celebrations #container {
+#page.selections #container, #page.local.celebrations #container {
   margin: 0px;
   padding: 0px;
   height: 100%;
